# virtio-forwarder

./: .gitignore  .gitreview  .zuul.yaml  LICENSE  Makefile  README.md  README.rst  argv.c  argv.h  cmdline.c  cmdline.h  cpuinfo.c  cpuinfo.h  dpdk_eal.c  dpdk_eal.h  file_mon.c  file_mon.h  log.c  log.h  meson.build  meson_options.txt  ovsdb_mon.c  ovsdb_mon.h  pkg_config_builder.py  setup.py  sriov.c  sriov.h  stats_dump.c  stats_dump.h  ugid.c  ugid.h  virtio_forwarder_compat.h  virtio_forwarder_main.c  virtio_forwarder_stats.c  virtio_vhostuser.c  virtio_vhostuser.h  virtio_worker.c  virtio_worker.h  virtioforwarder.proto  vrelay_version.h.in  (+12 more)
.copr/: Makefile
.github/.ci/: linux-build.sh
.github/data/build_templates/: template.sh
.github/data/dpdk_patches/: 0001-net-nfp-cancel-delayed-LSC-work-in-port-close-logic.patch  0002-net-nfp-free-HW-rings-memzone-on-queue-release.patch  README
.github/workflows/: build-dynamically-linked.yml  build-statically-linked-packages.yml  build.yml
ansible/: hosts.yaml  playbook.yaml  prepare-build-env.sh
ansible/roles/prepare-buildenv/tasks/: debian.yaml  main.yaml  redhat.yaml
ansible/roles/prepare-buildenv/templates/: 10acng.j2  mk-sbuild.rc.j2  sbuildrc.j2
doc/: Makefile  README.rst  conf.py  index.rst  meson.build
packaging/: virtio-forwarder.spec.in  virtioforwarder.spec.in
packaging/debian/: changelog  control  copyright  postinst  prerm  rules
scripts/: bind_uio_driver.py  core_scheduler.py  create_zmq_dir.py  meson.build  monitor_load.py  parse_numa.py  virtioforwarder_config.py  virtioforwarder_config_tester.py  virtioforwarder_core_pinner.py  virtioforwarder_core_scheduler.py  virtioforwarder_monitor_load.py  virtioforwarder_port_control.py  virtioforwarder_port_control_tester.py  virtioforwarder_stats.py  virtioforwarder_stats_tester.py
scripts/python2/: virtioforwarder_port_control.py  virtioforwarder_stats.py
scripts/python3/: bind_uio_driver.py  create_zmq_dir.py  parse_numa.py  virtioforwarder_config.py  virtioforwarder_core_pinner.py  virtioforwarder_core_scheduler.py  virtioforwarder_monitor_load.py  virtioforwarder_port_control.py  virtioforwarder_stats.py
startup/: meson.build  vio4wd-post-stop.sh  vio4wd-pre-start.sh  vio4wd-start.sh  virtioforwarder
startup/systemd/: meson.build  vio4wd_core_scheduler.service  virtio-forwarder.service
startup/upstart/: vio4wd_core_scheduler.conf  virtio-forwarder.conf
